# Coding_Agent

./: .gitignore  phase-1-architecture-overview.md  phase-2-core-business-flow.md  phase-3-code-quality.md  phase-4-modification-guide.md  phase-5-python-migration-analysis.md  progress.md  python-architecture-design.md
python-mini-code/: README.md  main.py  pyproject.toml
python-mini-code/agent/: events.py  loop.py
python-mini-code/commands/: registry.py
python-mini-code/commands/builtin/: basic.py
python-mini-code/config/: paths.py  settings.py
python-mini-code/context/: auto.py  collapse.py  constants.py  groups.py  micro.py  pipeline.py  snip.py  strategy.py
python-mini-code/infra/: errors.py  types.py
python-mini-code/infra/storage/: large_results.py
python-mini-code/infra/tokens/: counter.py
python-mini-code/mcp/: auth.py  client.py  http_client.py  proxy.py  stdio.py
python-mini-code/model/: anthropic.py
python-mini-code/perm/: chain.py  classifier.py  manager.py  store.py
python-mini-code/perm/handlers/: base.py  persist.py  session_allow.py  session_deny.py  workspace.py
python-mini-code/skills/: discover.py  installer.py
python-mini-code/tools/: definition.py  diff.py  workspace.py
python-mini-code/tools/builtin/: __init__.py  ask_user.py  edit_file.py  grep_files.py  list_files.py  modify_file.py  patch_file.py  read_file.py  run_command.py  web_fetch.py  web_search.py  write_file.py
python-mini-code/ui/: protocol.py
python-mini-code/ui/pipe/: app.py
python-mini-code/ui/tty/: app.py  input_handler.py  render.py  transcript.py
(+1 files in other folders)
