[project]
name = "mini-code"
version = "0.1.0"
description = "AI-powered terminal coding assistant"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.49.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "tiktoken>=0.7.0",
    "tenacity>=9.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
